--- a/root/index.html
+++ b/root/index.html
@@ -9,10 +9,21 @@
   <body>
     <main>
       <nav id="navbar">
-        <a href="#projects">Projects</a>
-        <a href="#links">Links</a>
+        <ul class="nav-ul">
+          <li>
+            <a href="#welcome-section">About Me</a>
+          </li>
+          <li>
+            <a href="#projects">Projects</a>
+          </li>
+          <li>
+            <a href="#links">Links</a>
+          </li>
+        </ul>
       </nav>
-      <section id="welcome-section"><h1>Welcome to my Portfolio</h1></section>
+      <section id="welcome-section"><h1>Welcome to my Portfolio</h1>
+        <p id="bio">I am Bradley Aidan Johnson, I code stuff. Working on improving</p>
+      </section>
       <section id="projects">
         <div class="projects">
           <div class="project-title"><a href="">Project1</a></div>
