base working before edits

--- a/root/index.html
+++ b/root/index.html
@@ -4,6 +4,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+    rel="stylesheet"
+  />
     <title>Bradley Aidan Johnson</title>
   </head>
   <body>
@@ -22,16 +36,76 @@
         </ul>
       </nav>
       <section id="welcome-section"><h1>Welcome to my Portfolio</h1>
-        <p id="bio">I am Bradley Aidan Johnson, I code stuff. Working on improving</p>
+        <p id="bio">I'm Bradley Aidan Johnson, I code stuff. Working on improving</p>
       </section>
       <section id="projects">
+        <h1>Projects I Have Worked On</h1>
         <div class="projects">
-          <div class="project-title"><a href="">Project1</a></div>
+          <a
+          href="https://github.com/bradleyaidanjohnson/Trader"
+          target="_blank"
+          class="project project-tile"
+        >
+          <img
+            class="project-image"
+            src="images/project-thumbnails/trader.png"
+            alt="project thumbnail"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Trader
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+          <div class="project"><div class="project-title"><a href="">Project1</a></div></div>
+          <div class="project"><div class="project-title"><a href="">Project1</a></div></div>
+          <div class="project"><div class="project-title"><a href="">Project1</a></div></div>
+          <div class="project"><div class="project-title"><a href="">Project1</a></div></div>
+          <div class="project"><div class="project-title"><a href="">Project1</a></div></div>
         </div>
+        <a
+        href="https://www.freecodecamp.org/fccdedcde72-122d-44fd-8541-05d05051e35d"
+        class="btn btn-show-all"
+        target="_blank"
+        >Show all<i class="fas fa-chevron-right"></i
+      ></a>
       </section>
       <section id="links">
-        <a id="profile-link" href="https://github.com/bradleyaidanjohnson" target="_blank">My GitHub</a>
+        <div class="contact-links">
+          <a
+          href="https://facebook.com/bradleyaidanjohnson"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-facebook-square"></i> Facebook</a
+        >
+        <a
+          id="profile-link"
+          href="https://github.com/bradleyaidanjohnson"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-github"></i> GitHub</a
+        >
+        <a
+          href="https://twitter.com/bradleyajohnson"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-twitter"></i> Twitter</a
+        >
+        <a href="mailto:bradleyaidanjohnson@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a
+        >
+        <a href="tel:07957-335-222" class="btn contact-details"
+          ><i class="fas fa-mobile-alt"></i> Call me</a
+        >
+        </div>
       </section>
+      <footer>
+        <p>
+          All works belong to Bradley Aidan Johnson
+        </p>
+        <p>
+          Enjoy!
+        </p>
+      </footer>
     </main>
   </body>
 </html>
